# LXMF

./: README.md  pyproject.toml  setup.py
LXMF/: Handlers.py  LXMF.py  LXMPeer.py  LXMRouter.py  LXMessage.py  LXStamper.py  __init__.py
LXMF/Utilities/: lxmd.py
docs/: example_receiver.py  example_sender.py
